assets/css/main.css
:root{
    --padding: 0 20%;
}

* {
    box-sizing: border-box;
}

/* Generic reset styles */
body {
    margin: 0;
    font-family: sans-serif;
    text-align: left;
}

ul {
    list-style: none;
    padding: 0;
    margin: 0;
}


/* Main styles */

p{
    color: #333;
}

.divider {
    text-align: center;
    padding:0;
}

header {
    background-image: url(../img/header_background.webp);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    height: 675px;
    padding: 0 25%;
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}

header h1 {
    color: white;
    text-align: left;
    align-self: center;
    justify-self: flex-start;
}

header img:nth-of-type(1) {
    align-self: flex-start;
    justify-self: flex-start;
}

header img:nth-of-type(2) {
    align-self: flex-end;
    justify-self: flex-end;
}

nav#popout {
    display: none;
}

button {
    border: none;
    background: transparent;
    height: 40px;
    width: 40px;
}

#small_side {
    background: black;
    width: fit-content;
    border: 1px solid white;
    position: fixed;
    left: 0%;
    top: 60%;
    bottom: 40%;
    height: fit-content;
}

nav#small_side ul li {
    padding: 10px;
}

section:not(.divider){
    padding: var(--padding);
}

#top_section {
    padding-top: 50px;
    text-align: center;
    margin: 0 15%;
}

#top_section h1 {
    font-size: 30px;
}

#top_section p {
    font-size: 18px;
}

#pure_marlborough,
#quality,
#wines {
    display: grid;
    column-gap: 50px;
    align-items: center;
}

#pure_marlborough {
    grid-template-columns: 1fr 3fr;
    background-color:rgb(250, 250, 250);
}

.rightarrows{
    text-align: right;
}

#outer_wines{
    background-color:rgb(250, 250, 250);
}

#wines{
    grid-template-columns: 3fr 2fr 1fr;
    padding: 50px 0;
    text-align: center;
}

#wines h2{
    grid-column: 1 / 4;
}

#quality {
    grid-template-columns: 2fr 1fr;
}

#collage {
    display: grid;
    grid-template-columns: 1fr 1fr;
}

#collage1, #collage2{
    display: flex;
    flex-wrap: wrap;
}

footer {
    padding: 30px 15%;
    background-color: black;
    color: white;
}

footer a {
    color: white;

}

footer ul li:nth-of-type(3) img{
    height: 110px;
}

footer ul:nth-of-type(2) {
    text-align: right;
    font-weight: bolder;
}

footer ul a{
    text-decoration: none;
}

@media (max-width:1450px){
    section#wines,
    section#pure_marlborough,
    section#quality{
        grid-template-columns: 1fr;
    }

    section#wines h2{
        grid-column: 1;
    }
    main {
        padding: 100px 5% 0;
    }
}

